--- a/index_pose.html
+++ b/index_pose.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Campo in prospettiva + MATCHDAY</title>
+<title>Campo in prospettiva + MATCHDAY + Foto sopra badge</title>
 <style>
   :root{
-    --pitch-bottom: 14%;
-    --subs-gap:      6%;
+    --pitch-bottom: 14%;     /* distanza del trapezio dal fondo */
+    --subs-gap:      6%;     /* quanto spazio lasciare fra campo e panchina */
     --bg:#0b0c11;
     --roof-dark:#151923;
     --roof-mid:#1f2531;
@@ -21,7 +21,6 @@
     margin:0; background:var(--bg);
     display:grid; place-items:center;
     font-family:system-ui,Arial,sans-serif;
-    color:#fff;
   }
 
   .stage{
@@ -38,15 +37,7 @@
       linear-gradient(to bottom, var(--roof-mid) 0%, var(--roof-dark) 48%, #061007 100%);
   }
 
-  /* MATCHDAY in alto a sinistra */
-  .matchday-badge{
-    position:absolute; top:12px; left:12px; z-index:20;
-    padding:6px 14px; border-radius:6px; letter-spacing:1px;
-    background:var(--rossoblu); font-weight:700;
-    font-size: clamp(1rem, 2vw, 1.2rem);
-  }
-
-  /* Campo in prospettiva (solo sfondo + linee) */
+  /* Trapezio del campo (clip SOLO per erba/linee) */
   .pitch-wrap{
     position:absolute; left:50%; bottom:var(--pitch-bottom); transform:translateX(-50%);
     width:100%; height:75%;
@@ -59,41 +50,82 @@
       linear-gradient(to bottom, var(--grass-2), var(--grass-1));
     box-shadow: inset 0 -40px 80px rgba(0,0,0,.35);
   }
-  svg{position:absolute; inset:0; width:100%; height:100%}
+  svg{position:absolute; inset:0; width:100%; height:100%;}
 
-  /* Overlay giocatori SENZA clip-path: può uscire dal pitch */
-  .players-overlay{
+  /* Layer dei giocatori: NIENTE clip, così foto/badge possono uscire */
+  .players{
     position:absolute; left:50%; bottom:var(--pitch-bottom); transform:translateX(-50%);
     width:100%; height:75%;
-    overflow:visible; pointer-events:none; z-index:12;
-  }
-  .player{position:absolute; transform:translate(-50%,-50%);}
-  .chip{
-    background:#fff; color:#111; border-radius:999px;
-    padding:6px 10px; font-weight:900; font-size:12px; letter-spacing:.2px; white-space:nowrap;
-    box-shadow:0 6px 16px rgba(0,0,0,.35), inset 0 0 0 1px rgba(0,0,0,.08);
+    overflow:visible; pointer-events:none;
   }
 
-  /* Badge SUBS dentro al campo */
+  /* Singolo giocatore (posizionato con left/top in %) */
+  .player{ position:absolute; transform:translate(-50%, -100%); /* l'ancora è sotto i piedi */ }
+
+  /* Foto busto scontornata */
+  .player .photo{
+    display:block;
+    width:clamp(70px, 9.8vw, 130px);
+    height:auto;
+    filter: drop-shadow(0 8px 18px rgba(0,0,0,.45));
+    pointer-events:none;
+  }
+
+  /* Badge sotto la foto (formato già concordato) */
+  .badge{
+    margin-top:6px;
+    display:inline-block;
+    padding:6px 12px;
+    background:#fff;
+    color:#111;
+    border-radius:18px;
+    font-weight:900;
+    font-size:clamp(11px,1.3vw,14px);
+    line-height:1;
+    white-space:nowrap;
+    border:2px solid rgba(0,0,0,.08);
+    box-shadow:0 2px 8px rgba(0,0,0,.18);
+  }
+
+  /* SUBS: badge dentro al campo, lista fuori */
   .subs-badge{
     position:absolute; bottom:calc(var(--pitch-bottom) + 6px);
-    left:calc(3% + 6px); z-index:15;
-    padding:4px 10px; min-width:56px; text-align:center;
-    background:var(--rossoblu); color:#fff; font-weight:700;
-    font-size: clamp(.8rem, 1.2vw, .95rem); border-radius:4px; pointer-events:none;
+    left:calc(3% + 6px);
+    padding:4px 10px;
+    background:var(--rossoblu);
+    color:#fff; font-weight:700;
+    font-size: clamp(.8rem, 1.2vw, .95rem);
+    border-radius:4px;
+    min-width:56px; text-align:center;
+    pointer-events:none;
+  }
+  .subs-list{
+    position:absolute; left:0; right:0;
+    bottom:calc(var(--pitch-bottom) - var(--subs-gap));
+    color:#fff;
+    font-size: clamp(.85rem, 1.3vw, 1rem);
+    text-align:center;
+    padding:2px 12px;
+    word-break: break-word;
+    overflow-wrap: anywhere;
+    opacity:.95;
+    letter-spacing:.3px;
   }
 
-  /* Elenco panchina sotto al campo */
-  .subs-list{
-    position:absolute; left:0; right:0; z-index:10;
-    bottom:calc(var(--pitch-bottom) - var(--subs-gap));
-    color:#fff; text-align:center; padding:2px 12px;
-    font-size: clamp(.85rem, 1.3vw, 1rem);
-    word-break: break-word; overflow-wrap:anywhere;
+  /* MATCHDAY badge */
+  .matchday-badge{
+    position:absolute; top:12px; left:12px;
+    padding:6px 14px;
+    background:var(--rossoblu);
+    color:#fff; font-weight:700;
+    font-size: clamp(1rem, 2vw, 1.2rem);
+    border-radius:6px;
+    letter-spacing:1px;
   }
 
   @media (max-width: 480px){
     :root{ --pitch-bottom: 16%; --subs-gap: 8%; }
+    .player .photo{ width:clamp(80px, 22vw, 140px); } /* un filo più grande su mobile */
   }
 </style>
 </head>
@@ -103,25 +135,24 @@
 
     <div class="matchday-badge">MATCHDAY</div>
 
-    <!-- Sfondo campo con clip-path -->
-    <div class="pitch-wrap" id="pitchWrap">
+    <!-- Campo (clip) -->
+    <div class="pitch-wrap">
       <div class="grass"></div>
       <svg viewBox="0 0 1000 1000" preserveAspectRatio="none">
         <g id="lines" stroke="white" fill="none"></g>
       </svg>
     </div>
 
-    <!-- Overlay giocatori (nessun clipping) -->
-    <div class="players-overlay" id="players"></div>
+    <!-- Layer giocatori (NO clip, così escono dai bordi su mobile) -->
+    <div class="players" id="players"></div>
 
+    <!-- SUBS -->
     <div class="subs-badge">SUBS:</div>
-    <div class="subs-list" id="subsText">[nomi panchinari qui]</div>
+    <div class="subs-list" id="subsList">[panchinari qui]</div>
   </div>
 
 <script>
-/* =======================
-   Campo in prospettiva
-   ======================= */
+/* ====== DISEGNO CAMPO (uguale alla tua versione “giusta”) ====== */
 const W=68,H=105,areaW=40.32,areaD=16.5,goalW=18.32,goalD=5.5,spot=11,R=9.15;
 const TL={x:120,y:130}, TR={x:880,y:130}, BL={x:0,y:1000}, BR={x:1000,y:1000};
 const lerp=(a,b,t)=>({x:a.x+(b.x-a.x)*t, y:a.y+(b.y-a.y)*t});
@@ -132,122 +163,182 @@ const addLine=(u1,v1,u2,v2,w=3)=>addPolyline([map(u1,v1),map(u2,v2)],w);
 function addRect(x1,y1,x2,y2,w=3){addLine(x1,y1,x2,y1,w); addLine(x1,y2,x2,y2,w); addLine(x1,y1,x1,y2,w); addLine(x2,y1,x2,y2,w);}
 function addCircle(cx,cy,r,from,to,steps=240,w=3){const pts=[]; for(let i=0;i<=steps;i++){const a=from+(to-from)*i/steps; pts.push(map(cx+r*Math.cos(a),cy+r*Math.sin(a)));} addPolyline(pts,w);}
 function addDot(u,v,r=2.2){const p=map(u,v); const c=document.createElementNS('http://www.w3.org/2000/svg','circle'); c.setAttribute('cx',p.x); c.setAttribute('cy',p.y); c.setAttribute('r',r); c.setAttribute('fill','white'); G.appendChild(c);}
-
 addPolyline([TL,TR,BR,BL,TL],6);
 addLine(0,H/2,W,H/2,3);
 addCircle(W/2,H/2,R,0,2*Math.PI,280,3); addDot(W/2,H/2);
-
 const cx=W/2, ax1=cx-areaW/2, ax2=cx+areaW/2, ay2=areaD;
 const gx1=cx-goalW/2, gx2=cx+goalW/2, gy2=goalD;
-
 addRect(ax1,0,ax2,ay2,3); addRect(gx1,0,gx2,gy2,3); addDot(cx,spot);
 const ay1b=H-areaD, gy1b=H-goalD;
 addRect(ax1,ay1b,ax2,H,3); addRect(gx1,gy1b,gx2,H,3); addDot(cx,H-spot);
-
 const eps=0.03, base=Math.acos((areaD-spot)/R);
 addCircle(cx,spot,R,base-eps,Math.PI-base+eps,260,3);
 addCircle(cx,H-spot,R,Math.PI+base-eps,2*Math.PI-base+eps,260,3);
 
-/* =======================
-   Dati dai Google Sheet
-   ======================= */
-const SHEET_FILE_ID='1nWG0OBGpiyK-lulP-OKGad4jG7uEVmcy';
-const DIST_GID='116187224';
+/* ====== DATI (stesso foglio del tuo index con i “pallini”) ====== */
+const SHEET_FILE_ID = '1nWG0OBGpiyK-lulP-OKGad4jG7uEVmcy';
+const DIST_GID = '116187224';  // distinta
+const PUBLISHED_DIST_URL =
+  'https://docs.google.com/spreadsheets/d/e/2PACX-1vSpJqXmoJaIznEo_EGHCfUxyYVWWKJCGULM9FbnI14hLhGpsjt3oMHT5ahJwEmJ4w/pubhtml?gid=116187224&single=true';
 
-const gvizJsonURL=(id,gid)=>`https://docs.google.com/spreadsheets/d/${id}/gviz/tq?gid=${encodeURIComponent(gid)}&headers=1&tqx=out:json`;
-const gvizCsvURL =(id,gid)=>`https://docs.google.com/spreadsheets/d/${id}/gviz/tq?gid=${encodeURIComponent(gid)}&headers=1&tqx=out:csv`;
+const XI_NUMBERS   = [1,2,5,3,7,6,4,11,10,9,8];   // 3-4-1-2
+const BENCH_NUMBERS= [12,13,14,15,16,17,18,19,20];
 
+const coords3412 = [
+  [50,86], [78,69], [50,72], [22,69],
+  [86,48], [62,50], [38,50], [14,48],
+  [50,33], [62,16], [38,16]
+]; // leggermente arretrate; GK sta poco sopra la linea di porta
+
+/* helpers */
+const el = s => document.querySelector(s);
+const gvizCsvURL  = (fileId, gid) => `https://docs.google.com/spreadsheets/d/${fileId}/gviz/tq?gid=${encodeURIComponent(gid)}&headers=1&tqx=out:csv`;
+function pubCsvURL(pubhtmlUrl){
+  const u = new URL(pubhtmlUrl);
+  const parts = u.pathname.split('/');
+  const idIdx = parts.findIndex(p=>p==='e')+1;
+  const id = parts[idIdx] || '';
+  const root = `${u.protocol}//${u.host}${parts.slice(0,idIdx).join('/')}/${id}`;
+  return `${root}/pub?gid=${encodeURIComponent(u.searchParams.get('gid')||'0')}&single=true&output=csv`;
+}
 function parseCSV(text){
-  let t=String(text||'').replace(/^\uFEFF/,'').replace(/\r\n?/g,'\n'); while(t.startsWith('\n')) t=t.slice(1);
-  const lines=t.split('\n').filter((ln,i)=>i===0||ln.trim().length>0); if(!lines.length) return [];
-  const rows=[]; let row=[],cur='',inQ=false; const pushC=()=>{row.push(cur);cur='';}; const pushR=()=>{rows.push(row);row=[];};
-  const s=lines.join('\n');
-  for(let i=0;i<s.length;i++){const c=s[i],n=s[i+1];
-    if(inQ){ if(c=='"' && n=='"'){cur+='"';i++;} else if(c=='"'){inQ=false;} else cur+=c; }
-    else{ if(c=='"'){inQ=true;} else if(c==','){pushC();} else if(c=='\n'){pushC();pushR();} else cur+=c; }
+  let t = String(text||'').replace(/^\uFEFF/, '').replace(/\r\n?/g, '\n');
+  const lines = t.split('\n').filter((ln,i)=> i===0 || ln.trim().length>0);
+  if (!lines.length) return [];
+  const rows=[]; let row=[], cur='', inQ=false;
+  const pushCell=()=>{ row.push(cur); cur=''; };
+  const pushRow =()=>{ rows.push(row); row=[]; };
+  const s = lines.join('\n');
+  for (let i=0;i<s.length;i++){
+    const c=s[i], n=s[i+1];
+    if (inQ){
+      if (c === '"' && n === '"'){ cur+='"'; i++; }
+      else if (c === '"'){ inQ=false; }
+      else { cur += c; }
+    }else{
+      if (c === '"'){ inQ=true; }
+      else if (c === ','){ pushCell(); }
+      else if (c === '\n'){ pushCell(); pushRow(); }
+      else { cur += c; }
+    }
   }
-  if(cur!==''||row.length){pushC();pushR();}
-  const header=(rows.shift()||[]).map(h=>String(h||'').trim());
-  return rows.filter(r=>r.some(v=>String(v||'').trim()!=='')).map(r=>Object.fromEntries(header.map((h,i)=>[h, r[i]??''])));
-}
-function parseGVizJSON(text){
-  const a=text.indexOf('{'), b=text.lastIndexOf('}'); const json=JSON.parse(text.slice(a,b+1));
-  const cols=json.table.cols.map(c=>(c.label||c.id||'').toString().trim()||'col');
-  return json.table.rows.map(r=>{const o={}; r.c.forEach((c,i)=>o[cols[i]||('col'+(i+1))]=(c&&c.v!=null)?String(c.v):''); return o;});
-}
-async function fetchRows(gid){
-  try{ const r=await fetch(gvizJsonURL(SHEET_FILE_ID,gid),{cache:'no-store'}); const t=await r.text(); const rows=parseGVizJSON(t); if(rows.length) return rows; }catch(e){}
-  const r2=await fetch(gvizCsvURL(SHEET_FILE_ID,gid),{cache:'no-store'}); const t2=await r2.text(); return parseCSV(t2);
+  if (cur!=='' || row.length) { pushCell(); pushRow(); }
+  const header = rows.shift().map(h=>String(h||'').trim());
+  return rows.map(r => Object.fromEntries(header.map((h,i)=>[h, r[i]!==undefined ? r[i] : '' ])));
 }
 
-/* Normalizzazione distinta */
+async function fetchDistRows(){
+  // 1) GViz CSV
+  try{
+    const res = await fetch(gvizCsvURL(SHEET_FILE_ID, DIST_GID), {cache:'no-store'});
+    if (!res.ok) throw new Error('gviz '+res.status);
+    const txt = await res.text();
+    const rows = parseCSV(txt);
+    if (rows.length) return rows;
+  }catch(e){}
+  // 2) Pub CSV fallback
+  const res = await fetch(pubCsvURL(PUBLISHED_DIST_URL), {cache:'no-store'});
+  const txt = await res.text();
+  return parseCSV(txt);
+}
+
 function normalizeDist(rows){
-  if(!rows?.length) return new Map();
-  const keys=Object.keys(rows[0]);
-  const norm=s=>String(s||'').normalize('NFD').replace(/[\u0300-\u036f]/g,'').toLowerCase().replace(/[^a-z0-9]/g,'');
-  let kNum=keys.find(k=>['num','numero','n','#','maglia','shirt'].includes(norm(k)));
-  let kName=keys.find(k=>['nome','cognome','giocatore','player','nomecognome'].includes(norm(k)));
-  const score=Object.fromEntries(keys.map(k=>[k,{num:0,txt:0}] ));
-  rows.forEach(r=>keys.forEach(k=>{
-    const v=String(r[k]??'').trim(); if(/^\d{1,2}$/.test(v)) score[k].num++; if(/[A-Za-zÀ-ÿ]/.test(v)) score[k].txt++;
-  }));
-  if(!kNum)  kNum = keys.reduce((a,b)=>score[a].num>=score[b].num?a:b);
-  if(!kName) kName= keys.filter(k=>k!==kNum).reduce((a,b)=>score[a].txt>=score[b].txt?a:b);
-  const map=new Map();
+  if (!rows || !rows.length) return new Map();
+  const keys = Object.keys(rows[0]);
+  // heuristics
+  const norm = s => String(s||'').normalize('NFD').replace(/[\u0300-\u036f]/g,'').toLowerCase();
+  let kNum = keys.find(k=>/#|num|numero|maglia/.test(norm(k))) || keys[0];
+  let kName= keys.find(k=>/giocatore|player|nome|cognome/.test(norm(k))) || keys[1];
+  let kPhoto=keys.find(k=>/foto|photo|img|immagine/.test(norm(k)));
+  const map = new Map();
   rows.forEach(r=>{
-    const n=Number(String(r[kNum]||'').trim()); if(!(n>0)) return;
-    const nm=String(r[kName]||'').trim();
-    map.set(n,{num:n, name:nm});
+    const n = Number(String(r[kNum]||'').trim());
+    if(!(n>0)) return;
+    map.set(n, {
+      num:n,
+      name: String(r[kName]||'').trim(),
+      photo: String(r[kPhoto]||'').trim()
+    });
   });
   return map;
 }
-const COGNOME = full => {const t=String(full||'').trim(); if(!t) return ''; const p=t.split(/\s+/); return p[p.length-1].toUpperCase();};
+const SURNAME = full => {
+  const t=String(full||'').trim();
+  if(!t) return '';
+  const p=t.split(/\s+/);
+  return p[p.length-1].toUpperCase();
+};
 
-/* =======================
-   Posizioni 3-4-1-2 (shiftate più indietro)
-   ======================= */
-/* Shift globale verso l’alto di ~3% per tutti, con GK custom vicino alla porta inferiore */
-const XI_NUMBERS   = [1,2,5,3,7,6,4,11,10,9,8];   // GK, D3, M4, AM, ST2
-const BENCH_NUMBERS= [12,13,14,15,16,17,18,19,20];
+/* ====== RENDER ====== */
+function pct(n){ return (n/1000*100).toFixed(3)+'%'; }
 
-const baseCoords3412 = [
-  /* GK   */ [50, 98],   // Taborri: poco sopra la linea di porta inferiore
-  /* D3   */ [22, 63], [50, 67], [78, 63],
-  /* M4   */ [12, 44], [38, 44], [62, 44], [88, 44],
-  /* AM   */ [50, 32],
-  /* ST2  */ [38, 13], [62, 13],
-];
+function playerNode(obj, x, y){
+  const div = document.createElement('div');
+  div.className='player';
+  div.style.left=pct(x); div.style.top=pct(y);
 
-function renderPlayers(byNum){
-  const box=document.getElementById('players'); box.innerHTML='';
-  baseCoords3412.forEach((pos,i)=>{
-    const num=XI_NUMBERS[i];
-    const p=byNum.get(num)||{num, name:''};
-    const [x,y]=pos;
-    const d=document.createElement('div'); d.className='player'; d.style.left=x+'%'; d.style.top=y+'%';
-    const chip=document.createElement('div'); chip.className='chip'; chip.textContent=`${num}. ${COGNOME(p.name)}`;
-    d.appendChild(chip); box.appendChild(d);
+  // foto (se presente) sopra il badge
+  if (obj.photo) {
+    const img = document.createElement('img');
+    img.className='photo';
+    img.alt = obj.name || '';
+    img.src = obj.photo;
+    img.onerror = () => {
+      // fallback locale: img/players/NUMERO.png
+      img.onerror=null;
+      img.src = `img/players/${obj.num}.png`;
+    };
+    div.appendChild(img);
+  } else {
+    // tenta direttamente il locale
+    const img = document.createElement('img');
+    img.className='photo';
+    img.alt = obj.name || '';
+    img.src = `img/players/${obj.num}.png`;
+    img.onerror = () => img.remove();
+    div.appendChild(img);
+  }
+
+  const badge = document.createElement('span');
+  badge.className='badge';
+  badge.textContent = `${obj.num}.${SURNAME(obj.name)}`;
+  div.appendChild(badge);
+
+  return div;
+}
+
+function render(byNum){
+  const layer = document.getElementById('players');
+  layer.innerHTML = '';
+
+  XI_NUMBERS.forEach((n,i)=>{
+    const p = byNum.get(n) || {num:n, name:''};
+    const [ux,uy] = coords3412[i];
+    // mappa coordinate 0..100 in x/y (percent), convertendole sul trapezio (0..1000)
+    const world = map( W*ux/100, H*uy/100 );
+    const node = playerNode(p, world.x, world.y);
+    layer.appendChild(node);
   });
+
+  // PANCHINA: senza virgole, stesso formato numero.COGNOME
+  const subs = BENCH_NUMBERS
+    .map(n => {
+      const p = byNum.get(n) || {num:n, name:''};
+      return `${p.num}.${SURNAME(p.name)}`;
+    })
+    .join('  ');
+  document.getElementById('subsList').textContent = subs;
 }
 
-function renderBench(byNum){
-  /* Nessuna virgola; stesso formato numero.COGNOME separato da spazio */
-  const text = BENCH_NUMBERS.map(n=>{
-    const p=byNum.get(n)||{num:n,name:''}; return `${n}.${COGNOME(p.name)}`.trim();
-  }).join(' ');
-  document.getElementById('subsText').textContent = text || '[nessun dato]';
-}
-
-/* Boot */
+/* ==== GO! ==== */
 (async function init(){
   try{
-    const distRows = await fetchRows(DIST_GID);
-    const byNum = normalizeDist(distRows);
-    renderPlayers(byNum);
-    renderBench(byNum);
+    const rows = await fetchDistRows();
+    const byNum = normalizeDist(rows);
+    render(byNum);
   }catch(e){
     console.error(e);
-    document.getElementById('subsText').textContent='[errore caricamento dati]';
+    render(new Map()); // mostra solo numeri
   }
 })();
 </script>
