--- a/index_pose.html
+++ b/index_pose.html
@@ -60,7 +60,7 @@
   }
 
   /* Singolo giocatore (posizionato con left/top in %) */
-  .player{ position:absolute; transform:translate(-50%, -100%); /* l'ancora è sotto i piedi */ }
+  .player{ position:absolute; transform:translate(-50%, -100%);text-align:center; /* l'ancora è sotto i piedi */ }
 
   /* Foto busto scontornata */
   .player .photo{
@@ -73,18 +73,19 @@
 
   /* Badge sotto la foto (formato già concordato) */
   .badge{
-    margin-top:0px;
-    display:inline-block;
-    padding:6px 12px;
-    background:#fff;
-    color:#111;
-    border-radius:18px;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    width: clamp(150px, 22vw, 240px); /* abbastanza lungo per 11.ACCIARRESI */
+    aspect-ratio: 5.5/1;              /* proporzione del tuo PNG */
+    margin:4px auto 0;
+    background: url('img/badge.png') center/contain no-repeat;
     font-weight:900;
-    font-size:clamp(11px,1.3vw,14px);
-    line-height:1;
+    font-size:clamp(12px,1.6vw,16px);
+    color:#000;
     white-space:nowrap;
-    border:2px solid rgba(0,0,0,.08);
-    box-shadow:0 2px 8px rgba(0,0,0,.18);
+    line-height:1;
+    pointer-events:none;
   }
 
   /* SUBS: badge dentro al campo, lista fuori */
