--- a/index_pose.html
+++ b/index_pose.html
@@ -130,18 +130,17 @@
     letter-spacing:1px;
   }
 
- @media (max-width: 480px){
-  :root{
-    --pitch-bottom: 16%;
-    --subs-gap: 8%;
-  }
+@media (max-width: 480px){
+  :root{ --pitch-bottom: 16%; --subs-gap: 8%; }
 
   .player .photo{
-    width: clamp(80px, 22vw, 140px); /* un filo più grande su mobile */
+    width: clamp(80px, 22vw, 140px);
   }
 
+  /* Badge sotto la foto: molto più grande su mobile */
   .badge{
-    width: clamp(240px, 40vw, 400px); /* molto più grande su mobile */
+    width: clamp(320px, 70vw, 460px);  /* qui il “min” fa la differenza */
+    /* in alternativa, se preferisci semplice: width: min(92vw, 460px); */
   }
 }
   img.badge, .badge img, .badge {
