--- a/index_pose.html
+++ b/index_pose.html
@@ -138,10 +138,7 @@
   }
 
   /* Badge sotto la foto: molto più grande su mobile */
-  .badge{
-    width: clamp(320px, 70vw, 460px);  /* qui il “min” fa la differenza */
-    /* in alternativa, se preferisci semplice: width: min(92vw, 460px); */
-  }
+.badge{ width: min(95vw, 500px); }
 }
   img.badge, .badge img, .badge {
   width: clamp(220px, 32vw, 360px) !important; /* aumenta pure se vuoi */
