--- a/index_pose.html
+++ b/index_pose.html
@@ -85,7 +85,7 @@
   width: clamp(220px, 32vw, 360px);  /* stessa lunghezza per tutti */
   aspect-ratio: 5.5/1;               /* proporzione del tuo PNG */
   margin-top:4px;
-  background: url('badge.png?v=2') center/contain no-repeat; /* <— percorso corretto */
+  background: url('badge.png?v=2') center/100% auto no-repeat; /* <— percorso corretto */
   font-weight:900;
   font-size:clamp(12px,1.6vw,16px);
   color:#000;
