--- a/index_pose.html
+++ b/index_pose.html
@@ -77,17 +77,17 @@
   margin:0 auto;
 }
 
-/* BADGE pennellata */
+/* Default (desktop/tablet) */
 .badge{
   display:flex;
   align-items:center;
   justify-content:center;
-  width: clamp(220px, 32vw, 360px);  /* stessa lunghezza per tutti */
-  aspect-ratio: 5.5/1;               /* proporzione del tuo PNG */
+  width: clamp(200px, 28vw, 340px);   /* desktop più contenuto */
+  aspect-ratio: 5.5/1;
   margin-top:4px;
-  background: url('badge.png?v=2') center/100% auto no-repeat; /* <— percorso corretto */
+  background: url('badge.png?v=4') center/100% auto no-repeat;
   font-weight:900;
-  font-size:clamp(12px,1.6vw,16px);
+  font-size: clamp(12px,1.6vw,16px);
   color:#000;
   white-space:nowrap;
   line-height:1;
@@ -137,8 +137,10 @@
     width: clamp(80px, 22vw, 140px);
   }
 
-  /* Badge sotto la foto: molto più grande su mobile */
-.badge{ width: min(95vw, 500px); }
+.badge{
+    width: clamp(260px, 85vw, 420px);  /* molto più largo su smartphone */
+    font-size: clamp(14px, 4vw, 20px);
+  }
 }
 </style>
 </head>
